--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>大发彩票网址导航-彩票导航之家 By 0234.Com</title>
-<meta name="keywords" content="网址导航,导航之家,大发彩票导航,0234导航,hao123,彩票购买,重庆时时彩,快3,快三,北京赛车PK10,重庆幸运农场,三分彩">
-<meta name="description" content="大发彩票导航,上网导航,网址导航,网站导航,网址之家,网址大全,网址,搜索,音乐,娱乐,图片,小游戏,短信,社区,日记,相册,K歌,通讯簿,BLOG,天气预报,实用工具.最方便,最快捷,最多华人使用的上网导航">
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title>无法显示此页</title>
+</head>
 <script type="text/javascript">
       //判断浏览器跳转手机站
       try {
@@ -16,117 +16,19 @@
       	}
       } catch (err) {}
 </script>
-<style type="text/css">
-<!-- body { font:normal 14px Tahoma, Simsun; margin:0; padding:25px 0 0; vertical-align:baseline; background:#fff; } h1 { font:bold 26px "微软雅黑", tahoma; margin:0 0 10px; } a { color:#0d63e3; } a:hover { color:#f54; } .header, .links, .footer { width:700px; margin:15px auto; padding:2px; text-align:center; } .search { width:700px; margin:15px auto; padding:8px 4px; text-align:center; background:#f8f8f8; border:2px solid #f2f2f2; } .search form { width:485px; margin:0 auto; } .i { font-size:16px; font-family:Tahoma; width:360px; height:24px; line-height:24px; padding:3px 6px; margin-right:2px; background:#fff url(img/search_bg.png) no-repeat; border:1px solid #b6b6b6; border-color:#7b7b7b #b6b6b6 #b6b6b6 #7b7b7b; display:inline-block; } .btn_wr { width:97px; height:34px; vertical-align:top; _padding-top:1px; background:url(img/search_bg.png) no-repeat -202px bottom; display:inline-block; } .btn { font:normal 14px Tahoma; width:95px; height:32px; padding:0; background:#ddd url(img/search_bg.png) no-repeat 0 -35px; cursor:pointer; border:0; } .btn_h { background-position:-100px -35px; } .description { font-size:12px; color:#888; margin:0; } .hide { display:none; } .linkad { width:712px; margin:10px auto; } .sites { width:700px; margin:15px auto; padding:4px; background:#fff; border:2px solid #f2f2f2; } .sites dl { height:36px; line-height:36px; margin:0; display:block; } .sites dl.alt { background:#f8f8f8; border-top:1px solid #f2f2f2; border-bottom:1px solid #f2f2f2; } .sites dt, .sites dd { text-align:center; display:block; float:left; } .sites dt { width:60px; } .sites dd { width:90px; margin:0; } .footer { font-size:11px; color:#888; margin:15px auto; } .center { text-align:center; font-weight:bold; } .center a { color:#ff3300; } -->
-</style>
-</head>
 <body>
-<div class="header">
-<h1>大发彩票网址导航</h1>
-<p class="description">最简单最安全的网址导航:0234.com <a onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('index.html');return(false);" href="index-2.html">设为首页</a></p></div>
-<div class="search">
-<form action="http://www.baidu.com/baidu" target="_blank">
-<table><tr><td>
-<input name="tn" type="hidden" value="baidu" />
-<input type="text" class="i" name="word" size="30" value="大发彩票0234.Com" />
-<span class="btn_wr"><input type="submit" class="btn" value="百度一下" onmousedown="this.className='btn btn_h'" onmouseout="this.className='btn'" /></span>
-</td></tr></table>
-</form>
-</div>
-<div class="sites"><dl><dt>彩 票</dt><dd><a href="http://www.0234cc.com/?vip=367254" target="_blank">
-		<font color="#FF3300">大发彩票</font></a></dd><dd>
-		<a target="_blank" href="http://www.lottery.gov.cn/">体育彩票</a></dd><dd>
-		<a target="_blank" href="http://www.zhcw.com/">中彩网</a></dd><dd>
-		<a target="_blank" href="http://lottery.sina.com.cn/">新浪彩票</a></dd><dd>
-		<a target="_blank" href="http://caipiao.sohu.com/">搜狐彩票</a></dd><dd>
-		<a target="_blank" href="http://caipiao.163.com/">网易彩票</a></dd><dd>
-		<a target="_blank" href="http://www.sporttery.cn/">竞彩网</a></dd></dl>
-<dl><dt>名 站</dt><dd><a target="_blank" href="http://www.google.cn/">谷 歌</a></dd><dd>
-		<a target="_blank" href="http://www.sina.com/">新 浪</a></dd><dd>
-		<a target="_blank" href="http://www.qq.com/">腾 讯</a></dd><dd>
-		<a target="_blank" href="http://www.sohu.com/">搜 狐</a></dd><dd>
-		<a target="_blank" href="http://www.163.com/">网 易</a></dd><dd>
-		<a target="_blank" href="http://www.ifeng.com/">凤凰网</a></dd><dd>
-		<a target="_blank" href="http://www.baidu.com/">百 度</a></dd></dl><dl class="alt"><dt>微 博</dt><dd>
-		<a target="_blank" href="http://t.qq.com/">腾讯微博</a></dd><dd>
-		<a target="_blank" href="http://weibo.com/">新浪微博</a></dd><dd>
-		<a target="_blank" href="http://t.163.com/">网易微博</a></dd><dd>
-		<a target="_blank" href="http://t.sohu.com/">搜狐微博</a></dd><dd>
-		<a target="_blank" href="http://t.tianya.cn/">天涯微博</a></dd><dd>
-		<a target="_blank" href="http://www.diandian.com/">点 点</a></dd><dd>
-		<a target="_blank" href="http://t.baidu.com/">百度说吧</a></dd></dl><dl><dt>新 闻</dt><dd>
-		<a target="_blank" href="http://news.sina.com.cn/">新浪新闻</a></dd><dd>
-		<a target="_blank" href="http://news.163.com/">网易新闻</a></dd><dd>
-		<a target="_blank" href="http://www.people.com.cn/">人民网</a></dd><dd>
-		<a target="_blank" href="http://www.xinhuanet.com/">新华网</a></dd><dd>
-		<a target="_blank" href="http://news.ifeng.com/">凤凰新闻</a></dd><dd>
-		<a target="_blank" href="http://www.zaobao.com/">联合早报</a></dd><dd>
-		<a target="_blank" href="http://www.huanqiu.com/">环球网</a></dd></dl><dl class="alt"><dt>音 乐</dt><dd>
-		<a target="_blank" href="http://mp3.baidu.com/">百度MP3</a></dd><dd>
-		<a target="_blank" href="http://ting.baidu.com/">百度ting!</a></dd><dd>
-		<a target="_blank" href="http://www.xiami.com/">虾米音乐</a></dd><dd>
-		<a target="_blank" href="http://www.9sky.com/">九天音乐</a></dd><dd>
-		<a target="_blank" href="http://music.qq.com/">QQ音乐</a></dd><dd>
-		<a target="_blank" href="http://douban.fm/">豆瓣电台</a></dd><dd>
-		<a target="_blank" href="http://www.songtaste.com/">SongTaste</a></dd></dl><dl><dt>视 频</dt><dd>
-		<a target="_blank" href="http://www.xunlei.com/">迅雷看看</a></dd><dd>
-		<a target="_blank" href="http://www.iqiyi.com/">爱奇艺</a></dd><dd>
-		<a target="_blank" href="http://www.youku.com/">优 酷</a></dd><dd>
-		<a target="_blank" href="http://www.tudou.com/">土豆网</a></dd><dd>
-		<a target="_blank" href="http://www.ku6.com/">酷6网</a></dd><dd>
-		<a target="_blank" href="http://www.pptv.com/?liyuan">PPTV</a></dd><dd>
-		<a target="_blank" href="http://www.xunbo.cc/?5331">迅播影院</a></dd></dl><dl class="alt"><dt>小 说</dt><dd>
-		<a target="_blank" href="http://www.qidian.com/">起点中文</a></dd><dd>
-		<a target="_blank" href="http://www.readnovel.com/">小说阅读</a></dd><dd>
-		<a target="_blank" href="http://www.hongxiu.com/">红袖添香</a></dd><dd>
-		<a target="_blank" href="http://www.xxsy.net/">潇湘书院</a></dd><dd>
-		<a target="_blank" href="http://hjsm.tom.com/">幻剑书盟</a></dd><dd>
-		<a target="_blank" href="http://www.jjwxc.net/">晋江原创</a></dd><dd>
-		<a target="_blank" href="http://www.rongshuxia.com/">榕树下</a></dd></dl><dl><dt>购 物</dt><dd>
-		<a target="_blank" href="http://www.taobao.com/">淘宝网</a></dd><dd>
-		<a target="_blank" href="http://www.tmall.com/">天 猫</a></dd><dd>
-		<a target="_blank" href="http://www.amazon.cn/">卓越亚马逊</a>
-		<img src="http://www.assoc-amazon.cn/" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></dd><dd>
-		<a target="_blank" href="http://www.vancl.com/">凡客诚品</a></dd><dd>
-		<a target="_blank" href="http://www.baixing.com/">房屋租售</a></dd><dd>
-		<a target="_blank" href="http://www.paipai.com/">拍拍网</a></dd><dd>
-		<a target="_blank" href="http://www.amazon.com/">Amazon US</a></dd></dl><dl class="alt"><dt>团 购</dt><dd>
-		<a target="_blank" href="http://www.manzuo.com/i/4048327.htm">满座</a></dd><dd>
-		<a target="_blank" href="http://tuanxiu.cn/">团秀</a></dd><dd>
-		<a target="_blank" href="http://www.meituan.com/r/i434476">美团</a></dd><dd>
-		<a target="_blank" href="http://tuan.kaixin001.com/">开心团购</a></dd><dd>
-		<a target="_blank" href="http://www.lashou.com/">拉手网</a></dd><dd>
-		<a target="_blank" href="http://www.wuxinghui.com/">五星汇</a></dd><dd>
-		<a target="_blank" href="http://www.gaopeng.com/">高朋</a></dd></dl><dl><dt>社 区</dt><dd>
-		<a target="_blank" href="http://www.8090bb.com/">宝贝网</a></dd><dd>
-		<a target="_blank" href="http://www.renren.com/">人人网</a></dd><dd>
-		<a target="_blank" href="http://www.douban.com/">豆 瓣</a></dd><dd>
-		<a target="_blank" href="http://www.tianya.cn/">天涯社区</a></dd><dd>
-		<a target="_blank" href="http://dzh.mop.com/">猫 扑</a></dd><dd>
-		<a target="_blank" href="http://www.pengyou.com/">腾讯朋友</a></dd><dd>
-		<a target="_blank" href="http://bai.sohu.com/">白社会</a></dd></dl><dl class="alt"><dt>游 戏</dt><dd>
-		<a target="_blank" href="http://www.sopopo.com/">单机游戏</a></dd><dd>
-		<a target="_blank" href="http://www.17173.com/">17173</a></dd><dd>
-		<a target="_blank" href="http://www.4399.net/">4399小游戏</a></dd><dd>
-		<a target="_blank" href="http://games.sina.com.cn/">新浪游戏</a></dd><dd>
-		<a target="_blank" href="http://www.duowan.com/">多玩游戏</a></dd><dd>
-		<a target="_blank" href="http://www.uuu9.com/">游久网</a></dd><dd>
-		<a target="_blank" href="http://www.52pk.com/">52PK</a></dd></dl><dl><dt>财 经</dt><dd>
-		<a target="_blank" href="http://www.eastmoney.com/">东方财富</a></dd><dd>
-		<a target="_blank" href="http://fund.eastmoney.com/">天天基金</a></dd><dd>
-		<a target="_blank" href="http://finance.sina.com.cn/">新浪财经</a></dd><dd>
-		<a target="_blank" href="http://www.hexun.com/">和讯财经</a></dd><dd>
-		<a target="_blank" href="http://www.stockstar.com/">证券之星</a></dd><dd>
-		<a target="_blank" href="http://www.icbc.com.cn/">工商银行</a></dd><dd>
-		<a target="_blank" href="http://www.cmbchina.com/">招商银行</a></dd></dl><dl class="alt"><dt>服 务</dt><dd>
-		<a target="_blank" href="http://www.ctrip.com/">携程旅行</a></dd><dd>
-		<a target="_blank" href="http://www.51job.com/">前程无忧</a></dd><dd>
-		<a target="_blank" href="http://www.ganji.com/">赶集网</a></dd><dd>
-		<a target="_blank" href="http://p.yiqifa.com/">途牛旅行</a></dd><dd>
-		<a target="_blank" href="http://www.chinamobile.com/">中国移动</a></dd><dd>
-		<a target="_blank" href="http://www.mycodes.net/">源码之家</a></dd><dd>
-		<a target="_blank" href="http://www.weisq.com/">微书签</a></dd></dl></div>
-<div class="footer">&copy;2017 大发彩票0234.Com 版权所有
-</div>
+
+<p><b><font size="7">无法显示此页</font></b><br>
+<br>
+<font size="1">● </font>确保 Web 地址 正确。<br>
+<font size="1">● </font>使用搜索引擎查找页面。<br>
+<font size="1">● </font>请过几分钟后刷新页面。<br>
+<font size="1">● </font>检查确认所有网线都已插好。<br>
+<font size="1">● </font>确认关闭了飞行模式。<br>
+<font size="1">● </font>确保开启了无线交换机。<br>
+<font size="1">● </font>看看能否连接到移动宽带。<br>
+<font size="1">● </font>重启路由器。</p>
+
+</body>
 
 </html>
